<resources>
    <string name="app_name">들리는대로 한글로 찾는 한태사전</string>

    <!-- main activity -->
    <string name="act_main_desc">검색 main</string>
    <string name="act_header_title_search">단어검색</string>
    <string name="act_header_title_setting">기타</string>
    <string name="act_et_hint">찾는 단어를 입력해보세요.</string>

    <!-- setting activity -->
    <string name="act_recent_version">최신 버전입니다.</string>
    <string name="act_no_recent_version">최신 버전이 아닙니다.</string>
    <string name="act_info_version">버전정보</string>
    <string name="act_info_director">제작자</string>
    <string name="act_director">다윗쏭</string>
    <string name="act_info_appendix">부록</string>
    <string name="act_app_red">고급\n태한 사전</string>
    <string name="act_app_blue">고급\n한태 사전</string>

    <!-- appendix activity -->
    <string name="act_appendix_title">부록</string>
    <string name="act_appendix_title_first">부록 1. 태국어 자음과 모음</string>
    <string name="act_appendix_title_second">부록 2. 성조 규칙</string>
    <string name="act_appendix_title_third">부록 3. 성조 연습</string>
    <string name="act_appendix_title_fourth">부록 4. 한글 읽고 쓰기</string>

    <!-- appendix content activity -->

    <!-- alert dialog -->
    <string name="alert_dlgfrag_title_type1">사전 업데이트</string>
    <string name="alert_dlgfrag_content_type1">사전이 업데이트되었습니다. 업데이트하시겠습니까?</string>
    <string name="alert_dlgfrag_title_type2">최신 업데이트</string>
    <string name="alert_dlgfrag_content_type2">사전이 업데이트되었습니다. 업데이트하시겠습니까?</string>

    <!-- 다이얼로그 관련 -->

    <string name="dialog_title_txt">유료버전 구매</string>
    <string name="dialog_title_msg">인증되지 않은 사용자 입니다. 유료버전을 구매하시겠습니까?</string>
    <string name="dialog_cancel_btn_txt">취소</string>
    <string name="dialog_pay_btn_txt">구매</string>

    <string name="cert_progress_popup_title">인증</string>
    <string name="cert_progress_popup_msg">유료사용자 인증중 입니다. 잠시만 기다려주십시요.설치 직 후 한번의 인증만 수행합니다.</string>

    <string name="dialog_retry_title_txt">오류</string>
    <string name="dialog_retry_title_msg">네트워크 오류 또는 서버오류로 인하여 인증에 실패하였습니다. 다시시도해주세요. </string>
    <string name="dialog_retry_cancel_btn_txt">취소</string>
    <string name="dialog_retry_cert_btn_txt">인증</string>

    <string name="dialog_nocert_title_txt">인증실패</string>
    <string name="dialog_nocert_title_msg">구글 플레이 인증실패입니다.유료버전을 구매해주세요</string>
    <string name="dialog_nocert_confirm_btn_txt">확인</string>

    <!-- detail item fragment -->
    <string name="frag_title_kor">한국어</string>
    <string name="frag_title_thai">태국어</string>
    <string name="frag_title_pronu">발음</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_intro">IntroAct</string>
    <string name="title_activity_main">MainAct</string>
    <string name="title_activity_setting">SettingAct</string>
    <string name="title_activity_appendix">AppendixAct</string>
    <string name="title_activity_appendix_content">AppendixContentAct</string>
    <string name="title_activity_details">DetailsAct</string>
</resources>
