<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_FFFFFF"
    android:orientation="vertical"
    tools:context="com.ph.korthaidictionary.act.AppendixAct">

    <include
        layout="@layout/activity_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_gravity="center_horizontal" />

    <FrameLayout
        android:id="@+id/act_appendix_title_first_fl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/list_selector"
        android:clickable="true"
        android:onClick="onClickAppendixContent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/dp_16"
            android:alpha="0.87"
            android:text="@string/act_appendix_title_first"
            android:textColor="@color/c_000000"
            android:textSize="@dimen/dp_16" />


        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/item_next_n" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/act_appendix_title_second_fl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/list_selector"
        android:clickable="true"
        android:onClick="onClickAppendixContent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/dp_16"
            android:alpha="0.87"
            android:text="@string/act_appendix_title_second"
            android:textColor="@color/c_000000"
            android:textSize="@dimen/dp_16" />


        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/item_next_n" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/act_appendix_title_thrid_fl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/list_selector"
        android:clickable="true"
        android:onClick="onClickAppendixContent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/dp_16"
            android:alpha="0.87"
            android:text="@string/act_appendix_title_third"
            android:textColor="@color/c_000000"
            android:textSize="@dimen/dp_16" />


        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/item_next_n" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/act_appendix_title_fourth_fl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/list_selector"
        android:clickable="true"
        android:onClick="onClickAppendixContent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/dp_16"
            android:alpha="0.87"
            android:text="@string/act_appendix_title_fourth"
            android:textColor="@color/c_000000"
            android:textSize="@dimen/dp_16" />


        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/dp_16"
            android:background="@drawable/item_next_n" />
    </FrameLayout>

</LinearLayout>